KPMP-720 fixed ie spacing issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,20 +8,6 @@ $packages-submit-footer-height: 87px;
 
 $footer-color: #283C5E;
 
-#form-footer {
-	background: #CCCCCC;
-	justify-content: center;
-}
-
-.ant-form-item-label {
-	label {
-		margin-bottom: 0rem !important;
-	}
-	label:after {
-		margin: 0 4px 0 2px;
-	}
-}
-
 body {
 	margin-top: $header-height-padded;
 
@@ -355,12 +341,16 @@ PACKAGES
 	}
 }
 
+#form-footer {
+	background: #CCCCCC;
+	justify-content: center;
+}
 
 .ant-form-item {
 	margin-bottom: 0px !important;
 
 	.ant-form-item-label {
-		line-height: unset !important;
+		line-height: 1em !important;
 		font-size: 14px;
 
 		label {
@@ -371,6 +361,7 @@ PACKAGES
 		label::after {
 			display: none !important;
 			content: "" !important;
+			margin: 0 4px 0 2px !important;
 		}
 
 		label.ant-form-item-required::before {
